--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -364,13 +364,13 @@
                                 </th>
                                 </tr>
                                 </thead>
-                                <tbody>
+                                <tbody class="text-center ">
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>1</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -405,11 +405,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>2</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -443,12 +443,12 @@
                                                 </span>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td class="font-weight-bold ">
+                                    <tr >
+                                        <td >
                                             <span>3</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -483,11 +483,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>4</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -522,11 +522,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>5</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -561,11 +561,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>6</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -600,11 +600,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>7</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -639,11 +639,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>8</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -678,11 +678,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>9</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
@@ -717,11 +717,11 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="font-weight-bold ">
+                                        <td >
                                             <span>10</span>
                                         </td>
                                         <td>
-                                            <span >D11</span>
+                                            <b>DC0001</b>
                                         </td>
                                         <td>
                                             <img class="rounded-circle " src="asset/image/sua_tuoi_vinamilk.jpg " style="width: 30px; height: 30px; " alt="Circle image ">
