--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -367,7 +367,7 @@
                                 <tbody class="text-center ">
                                     <tr>
                                         <td >
-                                            <span>1</span>
+                                            <b class="text-muted ">1</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -406,7 +406,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>2</span>
+                                            <b class="text-muted ">2</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -445,7 +445,7 @@
                                     </tr>
                                     <tr >
                                         <td >
-                                            <span>3</span>
+                                            <b class="text-muted ">3</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -484,7 +484,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>4</span>
+                                            <b class="text-muted ">4</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -523,7 +523,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>5</span>
+                                            <b class="text-muted ">5</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -562,7 +562,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>6</span>
+                                            <b class="text-muted ">6</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -601,7 +601,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>7</span>
+                                            <b class="text-muted ">7</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -640,7 +640,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>8</span>
+                                            <b class="text-muted ">8</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -679,7 +679,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>9</span>
+                                            <b class="text-muted ">9</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
@@ -718,7 +718,7 @@
                                     </tr>
                                     <tr>
                                         <td >
-                                            <span>10</span>
+                                            <b class="text-muted ">10</b>
                                         </td>
                                         <td>
                                             <b>DC0001</b>
