--- a/QL_donvi.html
+++ b/QL_donvi.html
@@ -445,7 +445,7 @@
                                 <tbody class="text-center ">
                                     <tr >
                                         <td>
-                                            <span>1</span>
+                                            <b class="text-muted ">1</b>
                                         </td>
                                         <td>
                                             <b>UN0001</b>
@@ -482,7 +482,7 @@
                                     </tr>
                                     <tr >
                                         <td>
-                                            <span>2</span>
+                                            <b class="text-muted ">2</b>
                                         </td>
                                         <td>
                                             <b>UN0002</b>
@@ -519,7 +519,7 @@
                                     </tr>
                                     <tr >
                                         <td>
-                                            <span>3</span>
+                                            <b class="text-muted ">3</b>
                                         </td>
                                         <td>
                                             <b>UN0003</b>
@@ -556,7 +556,7 @@
                                     </tr>
                                     <tr >
                                         <td>
-                                            <span>4</span>
+                                            <b class="text-muted ">4</b>
                                         </td>
                                         <td>
                                             <b>UN0004</b>
@@ -593,7 +593,7 @@
                                     </tr>
                                     <tr >
                                         <td>
-                                            <span>5</span>
+                                            <b class="text-muted ">5</b>
                                         </td>
                                         <td>
                                             <b>UN0005</b>
