--- a/QL_vaitro_chinhsua.html
+++ b/QL_vaitro_chinhsua.html
@@ -207,13 +207,13 @@
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="te">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-dark">
                                         Quản lý Công Thức 
                                   </a>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                                <ul class="list-group list-group-flush font-weight-bold">
+                                <ul class="list-group list-group-flush ">
                                     <li class="list-group-item">Full Option
                                         <div class="form-check form-check-inline float-right">
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -247,13 +247,13 @@
                         <div id="accordion" role="tablist">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="te">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-dark">
                                             Quản lý Công Thức 
                                       </a>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                                <ul class="list-group list-group-flush font-weight-bold">
+                                <ul class="list-group list-group-flush ">
                                     <li class="list-group-item">Full Option
                                         <div class="form-check form-check-inline float-right">
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -287,13 +287,13 @@
                         <div id="accordion" role="tablist">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="te">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-dark">
                                             Quản lý Công Thức  
                                       </a>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                                <ul class="list-group list-group-flush font-weight-bold">
+                                <ul class="list-group list-group-flush ">
                                     <li class="list-group-item">Full Option
                                         <div class="form-check form-check-inline float-right">
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -327,13 +327,13 @@
                         <div id="accordion" role="tablist">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="te">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-dark">
                                             Quản lý Công Thức 
                                       </a>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                                <ul class="list-group list-group-flush font-weight-bold">
+                                <ul class="list-group list-group-flush ">
                                     <li class="list-group-item">Full Option
                                         <div class="form-check form-check-inline float-right">
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -367,13 +367,13 @@
                         <div id="accordion" role="tablist">
                             <div class="card-header" role="tab" id="headingOne">
                                 <h5 class="mb-0">
-                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="te">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-dark">
                                             Quản lý Công Thức Demo
                                       </a>
                                 </h5>
                             </div>
                             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                                <ul class="list-group list-group-flush font-weight-bold">
+                                <ul class="list-group list-group-flush ">
                                     <li class="list-group-item">Full Option
                                         <div class="form-check form-check-inline float-right">
                                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
