--- a/QL_vaitro_chinhsua.html
+++ b/QL_vaitro_chinhsua.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HNMU_vaitro_themmoi</title>
+    <title>HNMU_vaitro_chinhsua</title>
     <link rel="stylesheet" href="style_menu.css">
     <!-- <link rel="stylesheet" href="heading&button.css"> -->
     <link rel="stylesheet" href="QL_vaitro.css">
